# demos

./: .clang-format  .gitignore  README.md  build.py
cpp/: CMakeLists.txt
cpp/src/algorithm/: math.hpp  sort.hpp  test_math.cpp  test_sort.cpp
cpp/src/class/: class.cpp  get_member_function_pointer.cpp
cpp/src/small_tools/: big_endian_or_little.cpp
cpp/src/thread/: print_abc.cpp
cpp/temp/: README.md
cpp_linux/: CMakeLists.txt
cpp_linux/gcc/: second_child.cpp  second_parent.cpp  single.cpp  third.cpp
cpp_linux/gcc/fork/: fork_child.cpp  fork_parent.cpp  third.cpp
cpp_linux/src/: fork.cpp  inline_assembly.cpp  pipe.cpp  sig_atomic_t.cpp  single.cpp
